--- a/pom.xml
+++ b/pom.xml
@@ -16,15 +16,49 @@
     <name>pre-cu-master</name>
     <url>https://github.com/bacta/pre-cu</url>
 
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <javaVersion>1.8</javaVersion>
+        <bactaVersion>1.0.0-SNAPSHOT</bactaVersion>
+        <quasarVersion>0.7.4</quasarVersion>
+        <vecmathVersion>1.3.1</vecmathVersion>
+        <commonslangVersion>2.6</commonslangVersion>
+        <groovyVersion>2.4.6</groovyVersion>
+        <kryoserializesVersion>0.27</kryoserializesVersion>
+        <kryoVersion>2.24.0</kryoVersion>
+        <troveVersion>3.0.3</troveVersion>
+        <commonsconfigVersion>1.10</commonsconfigVersion>
+        <reflectionsVersion>0.9.9</reflectionsVersion>
+        <guiceVersion>4.0-beta5</guiceVersion>
+        <lombokVersion>1.14.8</lombokVersion>
+        <nettyVersion>4.0.24.Final</nettyVersion>
+        <slf4jVersion>1.7.10</slf4jVersion>
+        <smackVersion>4.0.1</smackVersion>
+        <couchbaseVersion>1.4.7</couchbaseVersion>
+        <gsonVersion>2.3</gsonVersion>
+        <jzlibVersion>1.1.3</jzlibVersion>
+        <velocityVersion>1.7</velocityVersion>
+        <metricsVersion>3.1.0</metricsVersion>
+        <jodatimeVersion>2.7</jodatimeVersion>
+        <disruptorVersion>3.3.0</disruptorVersion>
+        <commonsmodelerVersion>2.0.1</commonsmodelerVersion>
+        <commonscodecVersion>1.8</commonscodecVersion>
+
+        <logbackVersion>1.1.3</logbackVersion>
+        <junitVersion>4.12</junitVersion>
+        <spockVersion>1.0-groovy-2.4</spockVersion>
+        <cglibVersion>3.2.0</cglibVersion>
+    </properties>
+
     <issueManagement>
-        <url>https://github.com/bacta/pre-cu/issues</url>
+        <url>https://github.com/bacta/pre-cu-master/issues</url>
         <system>GitHub Issues</system>
     </issueManagement>
 
     <scm>
-        <url>https://github.com/com.ocdsoft.bacta/pre-cu</url>
-        <connection>scm:git:git://github.com/bacta/pre-cu.git</connection>
-        <developerConnection>scm:git:git@github.com:bacta/pre-cu.git</developerConnection>
+        <url>https://github.com/com.ocdsoft.bacta/pre-cu-master</url>
+        <connection>scm:git:git://github.com/bacta/pre-cu-master.git</connection>
+        <developerConnection>scm:git:git@github.com:bacta/pre-cu-master.git</developerConnection>
     </scm>
 
     <licenses>
@@ -42,6 +76,12 @@
             <url>https://github.com/kyleburkhardt</url>
             <id>kyleburkhardt</id>
         </developer>
+        <developer>
+            <email>chris@crrush.com</email>
+            <name>Chris Rush</name>
+            <url>https://github.com/crush83</url>
+            <id>crush83</id>
+        </developer>
     </developers>
 
     <!--<distributionManagement>-->
@@ -55,10 +95,6 @@
         <maven>3.0.4</maven>
     </prerequisites>
 
-    <properties>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    </properties>
-
     <modules>
         <module>engine</module>
         <module>soe</module>
@@ -69,5 +105,387 @@
         <module>swg</module>
         <module>pre-cu</module>
     </modules>
+
+    <build>
+        <pluginManagement>
+            <plugins>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-surefire-plugin</artifactId>
+                    <version>2.9</version>
+                    <configuration>
+                        <includes>
+                            <include>**/*Test.class</include>
+                            <include>**/*Spec.class</include>
+                        </includes>
+
+                        <argLine>-Dco.paralleluniverse.fibers.verifyInstrumentation=true</argLine>
+                        <argLine>-Dco.paralleluniverse.fibers.disableAgentWarning</argLine>
+
+                        <!-- Quasar Agent -->
+                        <argLine>-javaagent:${co.paralleluniverse:quasar-core:jar:jdk8}</argLine>
+                    </configuration>
+                </plugin>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-compiler-plugin</artifactId>
+                    <version>3.1</version>
+                    <configuration>
+                        <source>${javaVersion}</source>
+                        <target>${javaVersion}</target>
+                        <testSource>${javaVersion}</testSource>
+                        <testTarget>${javaVersion}</testTarget>
+                    </configuration>
+                </plugin>
+                <plugin>
+                    <groupId>org.codehaus.mojo</groupId>
+                    <artifactId>versions-maven-plugin</artifactId>
+                    <version>2.1</version>
+                </plugin>
+                <plugin>
+                    <groupId>org.codehaus.gmavenplus</groupId>
+                    <artifactId>gmavenplus-plugin</artifactId>
+                    <version>1.5</version>
+                    <executions>
+                        <execution>
+                            <goals>
+                                <goal>addSources</goal>
+                                <goal>addTestSources</goal>
+                                <goal>generateStubs</goal>
+                                <goal>compile</goal>
+                                <goal>testGenerateStubs</goal>
+                                <goal>testCompile</goal>
+                                <goal>removeStubs</goal>
+                                <goal>removeTestStubs</goal>
+                            </goals>
+                        </execution>
+                    </executions>
+                </plugin>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-antrun-plugin</artifactId>
+                    <executions>
+                        <execution>
+                            <id>instrument-classes</id>
+                            <phase>compile</phase>
+                            <configuration>
+                                <tasks>
+                                    <property name="ant_classpath" refid="maven.dependency.classpath"/>
+                                    <taskdef name="instrumentationTask" classname="co.paralleluniverse.fibers.instrument.InstrumentationTask"
+                                             classpath="${ant_classpath}"/>
+                                    <!-- Use "allowMonitors" to allow instrumenting methods containing synchronization -->
+                                    <!-- instrumentationTask allowMonitors="true" -->
+                                    <instrumentationTask>
+                                        <fileset dir="${project.build.directory}/classes/" includes="**/*.class"/>
+                                    </instrumentationTask>
+                                </tasks>
+                            </configuration>
+                            <goals>
+                                <goal>run</goal>
+                            </goals>
+                        </execution>
+
+                        <execution>
+                            <id>instrument-test-classes</id>
+                            <phase>test-compile</phase>
+                            <configuration>
+                                <tasks>
+                                    <property name="ant_classpath" refid="maven.dependency.classpath"/>
+                                    <taskdef name="instrumentationTask" classname="co.paralleluniverse.fibers.instrument.InstrumentationTask"
+                                             classpath="${ant_classpath}"/>
+                                    <!-- Use "allowMonitors" to allow instrumenting methods containing synchronization -->
+                                    <!-- instrumentationTask allowMonitors="true" -->
+                                    <instrumentationTask>
+                                        <fileset dir="${project.build.directory}/test-classes/" includes="**/*.class"/>
+                                    </instrumentationTask>
+                                </tasks>
+                            </configuration>
+                            <goals>
+                                <goal>run</goal>
+                            </goals>
+                        </execution>
+                    </executions>
+                </plugin>
+            </plugins>
+        </pluginManagement>
+        <plugins>
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>versions-maven-plugin</artifactId>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+            </plugin>
+            <plugin>
+                <groupId>org.codehaus.gmavenplus</groupId>
+                <artifactId>gmavenplus-plugin</artifactId>
+            </plugin>
+            <plugin>
+                <artifactId>maven-dependency-plugin</artifactId>
+                <version>2.5.1</version>
+                <executions>
+                    <execution>
+                        <id>getClasspathFilenames</id>
+                        <goals>
+                            <goal>properties</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>exec-maven-plugin</artifactId> <!-- Run with "mvn compile maven-dependency-plugin:properties exec:exec" -->
+                <version>1.3.2</version>
+                <configuration>
+                    <mainClass>com.ocdsoft.bacta.swg.precu.PreCuServer</mainClass>
+                    <workingDirectory>target/classes</workingDirectory>
+                    <executable>java</executable>
+                    <arguments>
+                        <!-- Turn off before production -->
+                        <argument>-Dco.paralleluniverse.fibers.verifyInstrumentation=true</argument>
+                        <argument>-Dco.paralleluniverse.fibers.disableAgentWarning</argument>
+
+                        <!-- Quasar Agent -->
+                        <argument>-javaagent:${co.paralleluniverse:quasar-core:jar:jdk8}</argument>
+
+                        <!-- Classpath -->
+                        <argument>-classpath</argument> <classpath/>
+
+                        <!-- Main class -->
+                        <argument>com.ocdsoft.bacta.swg.precu.PreCuServer</argument>
+                    </arguments>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
+
+
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>com.ocdsoft.bacta</groupId>
+                <artifactId>engine</artifactId>
+                <version>${bactaVersion}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.ocdsoft.bacta.engine.serialization</groupId>
+                <artifactId>kryo</artifactId>
+                <version>${bactaVersion}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.ocdsoft.bacta</groupId>
+                <artifactId>swg</artifactId>
+                <version>${bactaVersion}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.ocdsoft.bacta</groupId>
+                <artifactId>soe</artifactId>
+                <version>${bactaVersion}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.ocdsoft.bacta</groupId>
+                <artifactId>tre</artifactId>
+                <version>${bactaVersion}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.ocdsoft.bacta</groupId>
+                <artifactId>iff</artifactId>
+                <version>${bactaVersion}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.ocdsoft.bacta.data.couchbase</groupId>
+                <artifactId>couchbase-connector</artifactId>
+                <version>${bactaVersion}</version>
+            </dependency>
+            <dependency>
+                <groupId>ch.qos.logback</groupId>
+                <artifactId>logback-core</artifactId>
+                <version>${logbackVersion}</version>
+            </dependency>
+            <dependency>
+                <groupId>ch.qos.logback</groupId>
+                <artifactId>logback-classic</artifactId>
+                <version>${logbackVersion}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.slf4j</groupId>
+                <artifactId>slf4j-api</artifactId>
+                <version>${slf4jVersion}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.esotericsoftware.kryo</groupId>
+                <artifactId>kryo</artifactId>
+                <version>${kryoVersion}</version>
+            </dependency>
+            <dependency>
+                <groupId>de.javakaffee</groupId>
+                <artifactId>kryo-serializers</artifactId>
+                <version>${kryoserializesVersion}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.couchbase.client</groupId>
+                <artifactId>couchbase-client</artifactId>
+                <version>${couchbaseVersion}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.google.code.gson</groupId>
+                <artifactId>gson</artifactId>
+                <version>${gsonVersion}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.jcraft</groupId>
+                <artifactId>jzlib</artifactId>
+                <version>${jzlibVersion}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.igniterealtime.smack</groupId>
+                <artifactId>smack-core</artifactId>
+                <version>${smackVersion}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.igniterealtime.smack</groupId>
+                <artifactId>smack-tcp</artifactId>
+                <version>${smackVersion}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.velocity</groupId>
+                <artifactId>velocity</artifactId>
+                <version>${velocityVersion}</version>
+            </dependency>
+            <dependency>
+                <groupId>io.dropwizard.metrics</groupId>
+                <artifactId>metrics-core</artifactId>
+                <version>${metricsVersion}</version>
+            </dependency>
+            <dependency>
+                <groupId>io.dropwizard.metrics</groupId>
+                <artifactId>metrics-annotation</artifactId>
+                <version>${metricsVersion}</version>
+            </dependency>
+            <dependency>
+                <groupId>io.dropwizard.metrics</groupId>
+                <artifactId>metrics-healthchecks</artifactId>
+                <version>${metricsVersion}</version>
+            </dependency>
+            <dependency>
+                <groupId>joda-time</groupId>
+                <artifactId>joda-time</artifactId>
+                <version>${jodatimeVersion}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.lmax</groupId>
+                <artifactId>disruptor</artifactId>
+                <version>${disruptorVersion}</version>
+            </dependency>
+            <dependency>
+                <groupId>commons-modeler</groupId>
+                <artifactId>commons-modeler</artifactId>
+                <version>${commonsmodelerVersion}</version>
+            </dependency>
+            <dependency>
+                <groupId>java3d</groupId>
+                <artifactId>vecmath</artifactId>
+                <version>${vecmathVersion}</version>
+            </dependency>
+            <dependency>
+                <groupId>co.paralleluniverse</groupId>
+                <artifactId>quasar-core</artifactId>
+                <version>${quasarVersion}</version>
+                <classifier>jdk8</classifier>
+            </dependency>
+            <dependency>
+                <groupId>commons-codec</groupId>
+                <artifactId>commons-codec</artifactId>
+                <version>${commonscodecVersion}</version>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
+
+    <dependencies>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-core</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-classic</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>io.netty</groupId>
+            <artifactId>netty-all</artifactId>
+            <version>${nettyVersion}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>${lombokVersion}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.google.inject</groupId>
+            <artifactId>guice</artifactId>
+            <version>${guiceVersion}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.google.inject.extensions</groupId>
+            <artifactId>guice-assistedinject</artifactId>
+            <version>${guiceVersion}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.reflections</groupId>
+            <artifactId>reflections</artifactId>
+            <version>${reflectionsVersion}</version>
+        </dependency>
+        <dependency>
+            <groupId>commons-configuration</groupId>
+            <artifactId>commons-configuration</artifactId>
+            <version>${commonsconfigVersion}</version>
+        </dependency>
+        <dependency>
+            <groupId>net.sf.trove4j</groupId>
+            <artifactId>trove4j</artifactId>
+            <version>${troveVersion}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.codehaus.groovy</groupId>
+            <artifactId>groovy-all</artifactId>
+            <version>${groovyVersion}</version>
+        </dependency>
+        <dependency>
+            <groupId>commons-lang</groupId>
+            <artifactId>commons-lang</artifactId>
+            <version>${commonslangVersion}</version>
+        </dependency>
+        <dependency>
+            <groupId>java3d</groupId>
+            <artifactId>vecmath</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>${junitVersion}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.spockframework</groupId>
+            <artifactId>spock-core</artifactId>
+            <version>${spockVersion}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>cglib</groupId>
+            <artifactId>cglib-nodep</artifactId>
+            <version>${cglibVersion}</version>
+            <scope>test</scope>
+        </dependency>
+    </dependencies>
 
 </project>
