--- a/pom.xml
+++ b/pom.xml
@@ -24,30 +24,30 @@
         <vecmathVersion>1.3.1</vecmathVersion>
         <commonslangVersion>2.6</commonslangVersion>
         <groovyVersion>2.4.6</groovyVersion>
-        <kryoserializesVersion>0.27</kryoserializesVersion>
+        <kryoserializesVersion>0.37</kryoserializesVersion>
         <kryoVersion>2.24.0</kryoVersion>
         <troveVersion>3.0.3</troveVersion>
         <commonsconfigVersion>1.10</commonsconfigVersion>
-        <reflectionsVersion>0.9.9</reflectionsVersion>
-        <guiceVersion>4.0-beta5</guiceVersion>
-        <lombokVersion>1.14.8</lombokVersion>
+        <reflectionsVersion>0.9.10</reflectionsVersion>
+        <guiceVersion>4.0</guiceVersion>
+        <lombokVersion>1.16.8</lombokVersion>
         <nettyVersion>4.0.24.Final</nettyVersion>
-        <slf4jVersion>1.7.10</slf4jVersion>
+        <slf4jVersion>1.7.21</slf4jVersion>
         <smackVersion>4.0.1</smackVersion>
-        <couchbaseVersion>1.4.7</couchbaseVersion>
-        <gsonVersion>2.3</gsonVersion>
+        <couchbaseVersion>1.4.12</couchbaseVersion>
+        <gsonVersion>2.6.2</gsonVersion>
         <jzlibVersion>1.1.3</jzlibVersion>
         <velocityVersion>1.7</velocityVersion>
-        <metricsVersion>3.1.0</metricsVersion>
-        <jodatimeVersion>2.7</jodatimeVersion>
-        <disruptorVersion>3.3.0</disruptorVersion>
+        <metricsVersion>3.1.2</metricsVersion>
+        <jodatimeVersion>2.9.3</jodatimeVersion>
+        <disruptorVersion>3.3.4</disruptorVersion>
         <commonsmodelerVersion>2.0.1</commonsmodelerVersion>
-        <commonscodecVersion>1.8</commonscodecVersion>
+        <commonscodecVersion>1.10</commonscodecVersion>
 
-        <logbackVersion>1.1.3</logbackVersion>
+        <logbackVersion>1.1.7</logbackVersion>
         <junitVersion>4.12</junitVersion>
         <spockVersion>1.0-groovy-2.4</spockVersion>
-        <cglibVersion>3.2.0</cglibVersion>
+        <cglibVersion>3.2.2</cglibVersion>
     </properties>
 
     <issueManagement>
@@ -111,25 +111,8 @@
             <plugins>
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
-                    <artifactId>maven-surefire-plugin</artifactId>
-                    <version>2.9</version>
-                    <configuration>
-                        <includes>
-                            <include>**/*Test.class</include>
-                            <include>**/*Spec.class</include>
-                        </includes>
-
-                        <argLine>-Dco.paralleluniverse.fibers.verifyInstrumentation=true</argLine>
-                        <argLine>-Dco.paralleluniverse.fibers.disableAgentWarning</argLine>
-
-                        <!-- Quasar Agent -->
-                        <argLine>-javaagent:${co.paralleluniverse:quasar-core:jar:jdk8}</argLine>
-                    </configuration>
-                </plugin>
-                <plugin>
-                    <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-compiler-plugin</artifactId>
-                    <version>3.1</version>
+                    <version>3.3</version>
                     <configuration>
                         <source>${javaVersion}</source>
                         <target>${javaVersion}</target>
@@ -140,7 +123,7 @@
                 <plugin>
                     <groupId>org.codehaus.mojo</groupId>
                     <artifactId>versions-maven-plugin</artifactId>
-                    <version>2.1</version>
+                    <version>2.2</version>
                 </plugin>
                 <plugin>
                     <groupId>org.codehaus.gmavenplus</groupId>
@@ -157,6 +140,19 @@
                                 <goal>testCompile</goal>
                                 <goal>removeStubs</goal>
                                 <goal>removeTestStubs</goal>
+                            </goals>
+                        </execution>
+                    </executions>
+                </plugin>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-dependency-plugin</artifactId>
+                    <version>2.10</version>
+                    <executions>
+                        <execution>
+                            <id>getClasspathFilenames</id>
+                            <goals>
+                                <goal>properties</goal>
                             </goals>
                         </execution>
                     </executions>
@@ -206,6 +202,17 @@
                         </execution>
                     </executions>
                 </plugin>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-surefire-plugin</artifactId>
+                    <version>2.19</version>
+                    <configuration>
+                        <includes>
+                            <include>**/*Test.class</include>
+                            <include>**/*Spec.class</include>
+                        </includes>
+                    </configuration>
+                </plugin>
             </plugins>
         </pluginManagement>
         <plugins>
@@ -218,52 +225,15 @@
                 <artifactId>maven-compiler-plugin</artifactId>
             </plugin>
             <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-surefire-plugin</artifactId>
-            </plugin>
-            <plugin>
                 <groupId>org.codehaus.gmavenplus</groupId>
                 <artifactId>gmavenplus-plugin</artifactId>
             </plugin>
             <plugin>
-                <artifactId>maven-dependency-plugin</artifactId>
-                <version>2.5.1</version>
-                <executions>
-                    <execution>
-                        <id>getClasspathFilenames</id>
-                        <goals>
-                            <goal>properties</goal>
-                        </goals>
-                    </execution>
-                </executions>
-            </plugin>
-            <plugin>
-                <groupId>org.codehaus.mojo</groupId>
-                <artifactId>exec-maven-plugin</artifactId> <!-- Run with "mvn compile maven-dependency-plugin:properties exec:exec" -->
-                <version>1.3.2</version>
-                <configuration>
-                    <mainClass>com.ocdsoft.bacta.swg.precu.PreCuServer</mainClass>
-                    <workingDirectory>target/classes</workingDirectory>
-                    <executable>java</executable>
-                    <arguments>
-                        <!-- Turn off before production -->
-                        <argument>-Dco.paralleluniverse.fibers.verifyInstrumentation=true</argument>
-                        <argument>-Dco.paralleluniverse.fibers.disableAgentWarning</argument>
-
-                        <!-- Quasar Agent -->
-                        <argument>-javaagent:${co.paralleluniverse:quasar-core:jar:jdk8}</argument>
-
-                        <!-- Classpath -->
-                        <argument>-classpath</argument> <classpath/>
-
-                        <!-- Main class -->
-                        <argument>com.ocdsoft.bacta.swg.precu.PreCuServer</argument>
-                    </arguments>
-                </configuration>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
             </plugin>
         </plugins>
     </build>
-
 
     <dependencyManagement>
         <dependencies>
@@ -393,15 +363,15 @@
                 <version>${vecmathVersion}</version>
             </dependency>
             <dependency>
+                <groupId>commons-codec</groupId>
+                <artifactId>commons-codec</artifactId>
+                <version>${commonscodecVersion}</version>
+            </dependency>
+            <dependency>
                 <groupId>co.paralleluniverse</groupId>
                 <artifactId>quasar-core</artifactId>
                 <version>${quasarVersion}</version>
                 <classifier>jdk8</classifier>
-            </dependency>
-            <dependency>
-                <groupId>commons-codec</groupId>
-                <artifactId>commons-codec</artifactId>
-                <version>${commonscodecVersion}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
