--- a/.gitmodules
+++ b/.gitmodules
@@ -22,3 +22,6 @@
 [submodule "couchbase-connector"]
 	path = couchbase-connector
 	url = https://github.com/bacta/couchbase-connector.git
+[submodule "serialization-annotation-processor"]
+	path = serialization-annotation-processor
+	url = https://github.com/bacta/serialization-annotation-processor.git
