--- a/pom.xml
+++ b/pom.xml
@@ -20,7 +20,7 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <javaVersion>1.8</javaVersion>
         <bactaVersion>1.0.0-SNAPSHOT</bactaVersion>
-        <quasarVersion>0.7.4</quasarVersion>
+        <quasarVersion>0.7.5</quasarVersion>
         <vecmathVersion>1.3.1</vecmathVersion>
         <commonslangVersion>2.6</commonslangVersion>
         <groovyVersion>2.4.6</groovyVersion>
@@ -381,6 +381,11 @@
                 <artifactId>quasar-core</artifactId>
                 <version>${quasarVersion}</version>
                 <classifier>jdk8</classifier>
+            </dependency>
+            <dependency>
+                <groupId>co.paralleluniverse</groupId>
+                <artifactId>quasar-actors</artifactId>
+                <version>${quasarVersion}</version>
             </dependency>
             <dependency>
                 <groupId>org.spockframework</groupId>
