--- a/.gitignore
+++ b/.gitignore
@@ -16,4 +16,4 @@ hs_err_pid*
 # Created by .ignore support plugin (hsz.mobi)
 
 #Ignore the generated git*.properties files.
-git*.properties
+git-*.properties
