--- a/pre-cu/pom.xml
+++ b/pre-cu/pom.xml
@@ -63,10 +63,6 @@
             <artifactId>steerio</artifactId>
         </dependency>
         <dependency>
-            <groupId>com.ocdsoft.bacta.data.couchbase</groupId>
-            <artifactId>couchbase-connector</artifactId>
-        </dependency>
-        <dependency>
             <groupId>org.igniterealtime.smack</groupId>
             <artifactId>smack-core</artifactId>
         </dependency>
@@ -81,6 +77,10 @@
         <dependency>
             <groupId>org.apache.velocity</groupId>
             <artifactId>velocity</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>commons-codec</groupId>
+            <artifactId>commons-codec</artifactId>
         </dependency>
         <dependency>
             <groupId>co.paralleluniverse</groupId>
