--- a/pre-cu/pom.xml
+++ b/pre-cu/pom.xml
@@ -1,91 +1,113 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <modelVersion>4.0.0</modelVersion>
+  <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>pre-cu</artifactId>
-    <packaging>jar</packaging>
+  <artifactId>pre-cu</artifactId>
+  <packaging>jar</packaging>
 
-    <parent>
-        <groupId>com.ocdsoft.bacta</groupId>
-        <artifactId>swg</artifactId>
-        <version>1.0.0-SNAPSHOT</version>
-    </parent>
+  <parent>
+    <groupId>com.ocdsoft.bacta</groupId>
+    <artifactId>swg</artifactId>
+    <version>1.0.0-SNAPSHOT</version>
+  </parent>
 
-    <name>pre-cu</name>
-    <url>https://github.com/bacta/pre-cu</url>
+  <name>pre-cu</name>
+  <url>https://github.com/bacta/pre-cu</url>
 
-    <issueManagement>
-        <url>https://github.com/bacta/pre-cu/issues</url>
-        <system>GitHub Issues</system>
-    </issueManagement>
+  <issueManagement>
+    <url>https://github.com/bacta/pre-cu/issues</url>
+    <system>GitHub Issues</system>
+  </issueManagement>
 
-    <scm>
-        <url>https://github.com/com.ocdsoft.bacta/pre-cu</url>
-        <connection>scm:git:git://github.com/bacta/pre-cu.git</connection>
-        <developerConnection>scm:git:git@github.com:bacta/pre-cu.git</developerConnection>
-    </scm>
+  <scm>
+    <url>https://github.com/com.ocdsoft.bacta/pre-cu</url>
+    <connection>scm:git:git://github.com/bacta/pre-cu.git</connection>
+    <developerConnection>scm:git:git@github.com:bacta/pre-cu.git</developerConnection>
+  </scm>
 
-    <build>
-        <plugins>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-dependency-plugin</artifactId>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-antrun-plugin</artifactId>
-            </plugin>
-            <plugin>
-                <groupId>pl.project13.maven</groupId>
-                <artifactId>git-commit-id-plugin</artifactId>
-                <configuration>
-                    <generateGitPropertiesFilename>src/main/resources/git-swg.properties</generateGitPropertiesFilename>
-                </configuration>
-            </plugin>
-        </plugins>
-    </build>
+  <build>
+    <plugins>
+      <plugin>
+	<groupId>org.codehaus.mojo</groupId>
+	<artifactId>exec-maven-plugin</artifactId>
+	<version>1.5.0</version>
+	<executions>
+	  <execution>
+	    <goals>
+	      <goal>java</goal>
+	    </goals>
+	  </execution>
+	</executions>
+	<configuration>
+	  <mainClass>
+	    com.ocdsoft.bacta.swg.server.PreCuServer
+	  </mainClass>
+	  <arguments>
+	    <argument>game</argument>
+	    <argument>login</argument>
+	    <argument>chat</argument>
+	  </arguments>
+	</configuration>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-dependency-plugin</artifactId>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-antrun-plugin</artifactId>
+      </plugin>
+      <plugin>
+        <groupId>pl.project13.maven</groupId>
+        <artifactId>git-commit-id-plugin</artifactId>
+        <configuration>
+          <generateGitPropertiesFilename>src/main/resources/git-swg.properties</generateGitPropertiesFilename>
+        </configuration>
+      </plugin>
+    </plugins>
+  </build>
 
-    <dependencies>
-        <dependency>
-            <groupId>com.ocdsoft.bacta</groupId>
-            <artifactId>engine</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>com.ocdsoft.bacta</groupId>
-            <artifactId>soe</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>com.ocdsoft.bacta</groupId>
-            <artifactId>iff</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>steerio</groupId>
-            <artifactId>steerio</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>com.ocdsoft.bacta.data.couchbase</groupId>
-            <artifactId>couchbase-connector</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.igniterealtime.smack</groupId>
-            <artifactId>smack-core</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>com.ocdsoft.bacta</groupId>
-            <artifactId>tre</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.igniterealtime.smack</groupId>
-            <artifactId>smack-tcp</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.apache.velocity</groupId>
-            <artifactId>velocity</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>co.paralleluniverse</groupId>
-            <artifactId>quasar-core</artifactId>
-            <classifier>jdk8</classifier>
-        </dependency>
-    </dependencies>
+  <dependencies>
+    <dependency>
+      <groupId>com.ocdsoft.bacta</groupId>
+      <artifactId>engine</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>com.ocdsoft.bacta</groupId>
+      <artifactId>soe</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>com.ocdsoft.bacta</groupId>
+      <artifactId>iff</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>steerio</groupId>
+      <artifactId>steerio</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>com.ocdsoft.bacta.data.couchbase</groupId>
+      <artifactId>couchbase-connector</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.igniterealtime.smack</groupId>
+      <artifactId>smack-core</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>com.ocdsoft.bacta</groupId>
+      <artifactId>tre</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.igniterealtime.smack</groupId>
+      <artifactId>smack-tcp</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.velocity</groupId>
+      <artifactId>velocity</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>co.paralleluniverse</groupId>
+      <artifactId>quasar-core</artifactId>
+      <classifier>jdk8</classifier>
+    </dependency>
+  </dependencies>
 </project>
