--- a/pom.xml
+++ b/pom.xml
@@ -113,6 +113,11 @@
             </snapshots>
             <url>${project.baseUri}repo</url>
         </repository>
+	<repository>
+	    <id>clojars</id>
+	    <name>Clojars</name>
+	    <url>http://clojars.org/repo/</url>
+	</repository>
     </repositories>
 
     <modules>
@@ -462,6 +467,21 @@
 	    <groupId>org.clojure</groupId>
 	    <artifactId>clojure</artifactId>
 	    <version>1.8.0</version>
+	</dependency>
+	<dependency>
+	    <groupId>reply</groupId>
+	    <artifactId>reply</artifactId>
+	    <version>0.1.0-beta9</version>
+	</dependency>
+	<dependency>
+	    <groupId>org.clojure</groupId>
+	    <artifactId>tools.nrepl</artifactId>
+	    <version>0.2.12</version>
+	</dependency>
+	<dependency>
+	    <groupId>cider</groupId>
+	    <artifactId>cider-nrepl</artifactId>
+	    <version>0.13.0-SNAPSHOT</version>
 	</dependency>
         <dependency>
             <groupId>org.slf4j</groupId>
