Added ScriptService for attaching and detaching scripts. Fixes #65 Added ServerObject initialization logic in the format of ObjectInitializers and created a Guice provider class. Fixes #64 Added UniverseService and SceneService for loading and managing of Scenes. Added FileSystemWatcher class to engine for watching the a directory for file changes.

--- a/pre-cu/src/main/resources/conf/config.ini
+++ b/pre-cu/src/main/resources/conf/config.ini
@@ -68,19 +68,23 @@ MinutesBetweenCharCreate = 15
 DefaultProfession = crafting_artisan
 DisabledProfession = jedi
 
+[Bacta/GameServer/Scripts]
+#The path where scripts live. This directory is relative to System.getProperty("user.dir")
+path = scripts
+
+[Bacta/GameServer/Universe]
+#Determines how often weather should update in seconds
+weatherUpdateInterval = 900
+
+[Bacta/GameServer/Scenes]
+#List of scenes that will be loaded when GameServer starts. Scenes can be disabled by removing them from this list
+#or enabled by adding them to the list. Duplicate scenes will not be loaded twice, but try to keep the list clean.
+scene = tutorial
+scene = tatooine
+
 [Bacta/Script]
 # Relative to System.getProperty("user.dir")
 ScriptRoot=src/main/java/com/ocdsoft/bacta/swg/precu/script
-
-[Bacta/Zones]
-Zone = Tatooine
-Zone = Tutorial
-
-[Bacta/Zones/Tatooine]
-Terrain = terrain/tatooine.trn
-
-[Bacta/Zones/Tutorial]
-Terrain = terrain/tutorial.trn
 
 [Bacta/Network]
 UnacknowledgedLimit = 64
