--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 *.iml
 ### Java template
 *.class
+dependency-reduced-pom.xml
 
 # Mobile Tools for Java (J2ME)
 .mtj.tmp/
@@ -27,3 +28,4 @@ target/
 GPATH
 GRTAGS
 GTAGS
+
