--- a/pom.xml
+++ b/pom.xml
@@ -258,49 +258,6 @@
                     </configuration>
                 </plugin>
 		<plugin>
-		    <groupId>org.codehaus.mojo</groupId>
-		    <artifactId>build-helper-maven-plugin</artifactId>
-		    <version>1.5</version>
-		    <executions>
-			<execution>
-			    <id>add-clojure-source-dirs</id>
-			    <phase>generate-sources</phase>
-			    <goals>
-				<goal>add-source</goal>
-				<goal>add-resource</goal>
-			    </goals>
-			    <configuration>
-				<sources>
-				    <source>${clojure.source.dir}</source>
-				</sources>
-				<resources>
-				    <resource>
-					<directory>${clojure.source.dir}</directory>
-				    </resource>
-				</resources>
-			    </configuration>
-			</execution>
-			<execution>
-			    <id>add-clojure-test-source-dirs</id>
-			    <phase>generate-sources</phase>
-			    <goals>
-				<goal>add-test-source</goal>
-				<goal>add-test-resource</goal>
-			    </goals>
-			    <configuration>
-				<sources>
-				    <source>${clojure.testSource.dir}</source>
-				</sources>
-				<resources>
-				    <resource>
-					<directory>${clojure.testSource.dir}</directory>
-				    </resource>
-				</resources>
-			    </configuration>
-			</execution>
-		    </executions>
-		</plugin>
-		<plugin>
 		    <groupId>com.theoryinpractise</groupId>
 		    <artifactId>clojure-maven-plugin</artifactId>
 		    <version>1.8.1</version>
@@ -308,23 +265,13 @@
 		    <configuration>
 			<warnOnReflection>${clojure.warnOnReflection}</warnOnReflection>
 			<temporaryOutputDirectory>true</temporaryOutputDirectory>
+			<sourceDirectories>
+			    <sourceDirectory>scripts/main/clojure</sourceDirectory>
+			</sourceDirectories>
+			<testSourceDirectories>
+			    <testSourceDirectory>scripts/test/clojure</testSourceDirectory>
+			</testSourceDirectories>
 		    </configuration>
-		    <executions>
-			<execution>
-			    <id>clojure-compile</id>
-			    <phase>compile</phase>
-			    <goals>
-				<goal>compile</goal>
-			    </goals>
-			</execution>
-			<execution>
-			    <id>clojure-test</id>
-			    <phase>test</phase>
-			    <goals>
-				<goal>test</goal>
-			    </goals>
-			</execution>
-		    </executions>
 		</plugin>
             </plugins>
         </pluginManagement>
