[Update] Build location is now in project root /build

--- a/pom.xml
+++ b/pom.xml
@@ -53,7 +53,7 @@
         <spockVersion>1.0-groovy-2.4</spockVersion>
         <cglibVersion>3.2.2</cglibVersion>
 
-	<mainClass>com.ocdsoft.bacta.swg.server.PreCuServer</mainClass>
+        <final.build.location>${project.basedir}/build</final.build.location>
     </properties>
 
     <issueManagement>
