--- a/pre-cu/pom.xml
+++ b/pre-cu/pom.xml
@@ -109,6 +109,18 @@
                     <outputDirectory>${final.build.location}</outputDirectory>
                 </configuration>
             </plugin>
+            <plugin>
+                <artifactId>maven-clean-plugin</artifactId>
+                <version>3.0.0</version>
+                <configuration>
+                    <filesets>
+                        <fileset>
+                            <directory>${final.build.location}</directory>
+                            <followSymlinks>false</followSymlinks>
+                        </fileset>
+                    </filesets>
+                </configuration>
+            </plugin>
         </plugins>
     </build>
 
